--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,11 @@ body{
 
 /* Container 1 =============================== */
 
-.container1,.container2, .container1-img,.container2-img{
+.container1,
+.container2, 
+.container1-img,
+.container2-img, 
+.main-container{
     margin: auto;
     width: 350px;
 
@@ -103,4 +107,6 @@ body{
 
 
 
-
+.main-container img{
+    width: 100%;
+}
